[package]
name = "light-remocon"
version = "0.1.0"
authors = ["nnsnico <yuji.jampan.blue@gmail.com>"]
edition = "2018"

[dependencies]
# actix
actix-web     = "2"
actix-rt      = "1"
actix-http    = "1"
actix-service = "1.0"
env_logger    = "0.7"

futures = "0.3.5"
failure = "0.1"
log     = "0.4"

# json
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json       = "*"
